// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. default layout 1`] = `
<View
  aspectRatio={1.5}
>
  <Gradient
    degrees={264}
    height={350}
    width={525}
  >
    <View>
      <Svg
        height={143}
        version="1.1"
        viewBox="145 50 108 120"
        width={143}
      >
        <G
          fill="none"
          fillRule="evenodd"
          stroke="none"
          strokeWidth="1"
        >
          <Path
            d="6a6c07166e9c40e4f62e57af2b507822"
            fill="#FFFFFF"
          />
        </G>
      </Svg>
    </View>
  </Gradient>
  <Image
    source={
      Object {
        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
      }
    }
  />
</View>
`;

exports[`2. default layout without uri 1`] = `
<View
  aspectRatio={2}
>
  <Gradient
    degrees={264}
    height={350}
    width={700}
  >
    <View>
      <Svg
        height={191}
        version="1.1"
        viewBox="145 50 108 120"
        width={191}
      >
        <G
          fill="none"
          fillRule="evenodd"
          stroke="none"
          strokeWidth="1"
        >
          <Path
            d="6a6c07166e9c40e4f62e57af2b507822"
            fill="#FFFFFF"
          />
        </G>
      </Svg>
    </View>
  </Gradient>
  <Image
    source={null}
  />
</View>
`;

exports[`3. prepend https schema 1`] = `
<View
  aspectRatio={2}
>
  <Gradient
    degrees={264}
    height={350}
    width={700}
  >
    <View>
      <Svg
        height={191}
        version="1.1"
        viewBox="145 50 108 120"
        width={191}
      >
        <G
          fill="none"
          fillRule="evenodd"
          stroke="none"
          strokeWidth="1"
        >
          <Path
            d="6a6c07166e9c40e4f62e57af2b507822"
            fill="#FFFFFF"
          />
        </G>
      </Svg>
    </View>
  </Gradient>
  <Image
    source={
      Object {
        "uri": "https://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
      }
    }
  />
</View>
`;

exports[`4. handle onload event 1`] = `
<View
  aspectRatio={2}
>
  <Gradient
    degrees={264}
    height={350}
    width={700}
  >
    <View>
      <Svg
        height={191}
        version="1.1"
        viewBox="145 50 108 120"
        width={191}
      >
        <G
          fill="none"
          fillRule="evenodd"
          stroke="none"
          strokeWidth="1"
        >
          <Path
            d="6a6c07166e9c40e4f62e57af2b507822"
            fill="#FFFFFF"
          />
        </G>
      </Svg>
    </View>
  </Gradient>
  <Image
    source={
      Object {
        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
      }
    }
  />
</View>
`;

exports[`4. handle onload event 2`] = `
<View
  aspectRatio={2}
>
  <Image
    source={
      Object {
        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
      }
    }
  />
</View>
`;

exports[`6. uses highressize if it exists 1`] = `
<View
  aspectRatio={2}
>
  <Gradient
    degrees={264}
    height={350}
    width={700}
  >
    <View>
      <Svg
        height={191}
        version="1.1"
        viewBox="145 50 108 120"
        width={191}
      >
        <G
          fill="none"
          fillRule="evenodd"
          stroke="none"
          strokeWidth="1"
        >
          <Path
            d="6a6c07166e9c40e4f62e57af2b507822"
            fill="#FFFFFF"
          />
        </G>
      </Svg>
    </View>
  </Gradient>
  <Image
    source={
      Object {
        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=660",
      }
    }
  />
</View>
`;

exports[`8. image with borderradius 1`] = `
<View
  aspectRatio={2}
>
  <Image
    borderRadius={10}
    source={
      Object {
        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
      }
    }
  />
</View>
`;

exports[`9. uses lowressize image as placeholder if passed 1`] = `
<View
  aspectRatio={2}
>
  <Image
    source={
      Object {
        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800",
      }
    }
  />
  <Image
    source={
      Object {
        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=2308",
      }
    }
  />
</View>
`;

exports[`11. handle layout change 1`] = `
<View
  aspectRatio={2}
>
  <Gradient
    degrees={264}
    height={300}
    width={600}
  >
    <View>
      <Svg
        height={164}
        version="1.1"
        viewBox="145 50 108 120"
        width={164}
      >
        <G
          fill="none"
          fillRule="evenodd"
          stroke="none"
          strokeWidth="1"
        >
          <Path
            d="6a6c07166e9c40e4f62e57af2b507822"
            fill="#FFFFFF"
          />
        </G>
      </Svg>
    </View>
  </Gradient>
  <Image
    source={
      Object {
        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
      }
    }
  />
</View>
`;
